infra/k8s/deployments/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client-pod
  template:
    metadata:
      labels:
        app: client-pod
    spec:
      containers:
        - name: client
          image: jeldikk/client
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-ip-service
spec:
  type: ClusterIP
  selector:
    app: client-pod
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
