infra/k8s/deployments/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  selector:
    matchLabels:
      app: comments-pod
  template:
    metadata:
      labels:
        app: comments-pod
    spec:
      containers:
        - name: comments
          image: jeldikk/comments
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: comments-ip-service
spec:
  type: ClusterIP
  selector:
    app: comments-pod
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-port-service
spec:
  type: NodePort
  selector:
    app: comments-pod
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
