infra/k8s/deployments/posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-pod
  
  template:
    metadata:
      labels:
        app: posts-pod
    spec:
      containers:
        - name: posts
          image: jeldikk/posts
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: posts-ip-service
spec:
  selector:
    app: posts-pod
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-port-service
spec:
  type: NodePort
  selector:
    app: posts-pod
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
