infra/k8s/deployments/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  selector:
    matchLabels:
      app: query-pod
  template:
    metadata:
      labels:
        app: query-pod
    spec:
      containers:
      - name: query
        image: jeldikk/query
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: query-ip-service
spec:
  type: ClusterIP
  selector:
    app: query-pod
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-port-service
spec:
  type: NodePort
  selector:
    app: query-pod
  ports:
    - name: query
      port: 4002
      targetPort: 4002
