infra/k8s/deployments/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - host: posts.dev # you must add posts.dev mapped to localhost in C:\Windows\System32\drivers\etc\hosts
      http:
        paths:
          - pathType: Prefix
            path: /posts/create
            backend:
              service:
                name: posts-ip-service
                port: 
                  number: 4000
          - pathType: Prefix
            path: /posts
            backend:
              service:
                name: query-ip-service
                port: 
                  number: 4002
          - pathType: Prefix
            path: /posts/?(.*)/comments
            backend:
              service:
                name: comments-ip-service
                port: 
                  number: 4001
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-ip-service
                port: 
                  number: 3000
